[gd_scene load_steps=8 format=3 uid="uid://0lmotf0aqofp"]

[ext_resource type="Script" path="res://Scene/MainMenu/MainMenu.gd" id="1_itigu"]
[ext_resource type="Texture2D" uid="uid://dmylnibdx5hva" path="res://art assets/IMG_4473.png" id="2_dtt6e"]
[ext_resource type="Texture2D" uid="uid://dj2xj2irh3vj7" path="res://art assets/main menu/logo.png" id="3_t4j50"]
[ext_resource type="Texture2D" uid="uid://dg2sb8y87rl7m" path="res://art assets/IMG_4474.png" id="3_vgxix"]
[ext_resource type="Texture2D" uid="uid://btybq0205i27n" path="res://art assets/main menu/Start.png" id="4_3jwr0"]
[ext_resource type="Texture2D" uid="uid://c5sf4rmnfq0we" path="res://art assets/main menu/Credits.png" id="5_3aijs"]
[ext_resource type="FontFile" uid="uid://csn2xrcwo0hmm" path="res://art assets/font/Kaoly Demo-Regular.ttf" id="6_vigae"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_itigu")
file_path = "res://Scene/Story/Story.tscn"

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_dtt6e")
expand_mode = 1

[node name="table-kun" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_vgxix")
expand_mode = 1

[node name="logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1920.0
offset_top = -1249.0
offset_right = 1920.0
offset_bottom = 911.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(1952, 1172)
mouse_filter = 2
texture = ExtResource("3_t4j50")

[node name="start" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -427.0
offset_top = -271.0
offset_right = 428.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(423, 282)
mouse_filter = 2
texture = ExtResource("4_3jwr0")

[node name="credits" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -427.0
offset_top = -168.0
offset_right = 428.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(423, 282)
mouse_filter = 2
texture = ExtResource("5_3aijs")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -86.0
offset_right = 560.0
offset_bottom = 626.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("4_3jwr0")
flat = true
icon_alignment = 1

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("5_3aijs")
flat = true
icon_alignment = 1

[node name="LazyCredits" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="LazyCredits"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 260.0
offset_top = 120.0
offset_right = -260.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LazyCredits/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="LazyCredits/ColorRect/MarginContainer"]
layout_mode = 2

[node name="CreditsText" type="RichTextLabel" parent="LazyCredits/ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Leads: mysmee, monicasivart

Art: monicasivart, fujisprouts_
Programming: mysmee, MannyOnItch
Story: mysmee, MannyOnItch, monicasivart
Music: Jackson Forte"

[node name="VBoxContainer" type="HBoxContainer" parent="LazyCredits/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="LazyCredits/ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="ExitCreditsButton" type="Button" parent="LazyCredits/ColorRect/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("6_vigae")
text = "bye bye"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="LazyCredits/ColorRect/MarginContainer/VBoxContainer/VBoxContainer/ExitCreditsButton" to="." method="_on_exit_credits_button_pressed"]
